[project]
name = "drip-api"
version = "0.1.0"
description = "API for Drip Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==4.0.2",
    "beautifulsoup4==4.12.2",
    "bs4==0.0.1",
    "cachelib==0.9.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "flask==2.2.3",
    "flask-caching==2.0.2",
    "flask-cors==4.0.0",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "lxml==4.9.2",
    "markupsafe==2.1.2",
    "pytz==2023.3",
    "redis==4.5.5",
    "requests==2.28.2",
    "soupsieve==2.4",
    "urllib3==1.26.15",
    "werkzeug==2.2.3",
]
