[project]
name = "drip-api"
version = "0.1.0"
description = "API for Drip Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "flask-limiter[redis]>=4.1.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
